<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AdminActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="Add A Travel Deal"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dimen_common"
        android:layout_marginStart="@dimen/dimen_common"
        android:layout_marginRight="@dimen/dimen_common"
        android:layout_marginEnd="@dimen/dimen_common"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.cardview.widget.CardView
            android:id="@+id/vacationCard"
            android:layout_width="310dp"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

        <ImageView
            android:id="@+id/vac_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_image"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="160dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/dimen_common"
                android:clickable="true"
                android:gravity="center"
                android:paddingStart="@dimen/dimen_common"
                android:paddingEnd="@dimen/dimen_common"
                android:text="@string/addimage"
                android:textColor="@android:color/white"
                app:rippleColor="@color/color_ripple" />
        </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_common">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_vacation"
                android:maxLength="20"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_common">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_descrition"
                android:maxLines="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/currency_spinner"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:entries="@array/array_currency_unicodes" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_common2"
                android:layout_marginBottom="@dimen/dimen_common">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount_entry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_amount"
                    android:maxLength="20"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_vacation"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/dimen_common"
            android:clickable="true"
            android:gravity="center"
            android:paddingStart="@dimen/dimen_common"
            android:paddingEnd="@dimen/dimen_common"
            android:text="@string/save"
            android:textColor="@android:color/white"
            app:rippleColor="@color/color_ripple" />

    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>